# giganto-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  doc.yml  release.yml
src/: bincode_utils.rs  connection.rs  frame.rs  ingest.rs  lib.rs  peer.rs  publish.rs  test.rs
src/ingest/: log.rs  netflow.rs  network.rs  statistics.rs  sysmon.rs  timeseries.rs
src/publish/: range.rs  stream.rs
tests/: connection_integration.rs  frame_integration.rs  ingest_integration.rs  publish_integration.rs
tests/common/: mod.rs
