[package]
name = "giganto-client"
version = "0.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1"
chrono = { version = ">=0.4.35", default_features = false, features = [
  "serde",
] }
num_enum = "0.7"
quinn = "0.11"
semver = "1"
serde = { version = "1", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "std",
] }

[dev-dependencies]
futures = "0.3"
lazy_static = "1"
quinn = { version = "0.11", features = ["ring"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
