[package]
name = "giganto-client"
version = "0.25.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1"
num_enum = "0.7"
quinn = "0.11"
semver = "1"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = "1"

[dev-dependencies]
futures = "0.3"
quinn = { version = "0.11", features = ["ring"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
